<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/audioRecordLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/nameDurationLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/recordName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="50"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/recordDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/base_timer_MM_SS"
            android:textColor="#716E6E"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/audioPlayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/playBar"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:paddingTop="10dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playPauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/audioTimer"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#FFFBFB"
            app:borderWidth="1dp"
            app:fabCustomSize="49dp"
            app:tint="@null"
            app:maxImageSize="50dp"
            app:srcCompat="@drawable/play_button_fab"
            app:useCompatPadding="false"
            android:contentDescription="@string/play_pause_button"
            app:rippleColor="@color/blindly_purple" />

        <Chronometer
            android:id="@+id/audioTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playBar"
            android:layout_marginStart="30dp"
            android:textColor="#716E6E" />

        <Chronometer
            android:id="@+id/remainingTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playBar"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:textColor="#716E6E" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectButton"
            android:layout_width="@dimen/small_pill_shape_width"
            android:layout_height="@dimen/small_pill_shape_height"
            android:layout_below="@id/remainingTimer"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="10dp"
            android:text="@string/select"
            app:shapeAppearanceOverlay="@style/PillShapeButton"/>
    </RelativeLayout>

    <View
        android:id="@+id/recordDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>