<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".audio.RecordingActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recordingList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/recordDivider" />

    <View
        android:id="@+id/recordDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/recordingButton"
        android:background="?android:attr/listDivider" />

    <Chronometer
        android:id="@+id/remainingRecordTimer"
        android:format="Remaining:\n%s"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="58dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/recordingButton"
        android:contentDescription="@string/remaining_timer_description"/>

    <ImageButton
        android:id="@+id/recordingButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/record_button"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/play_pause_image_description"/>

    <Chronometer
        android:id="@+id/recordTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="65dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/recordingButton"
        android:contentDescription="@string/record_timer_description"/>
</RelativeLayout>