...
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:paddingTop="10dp"
            android:layout_below="@+id/record_name"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/audio_timer"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
...
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:textColor="#716E6E"
            android:contentDescription="@string/remaining_timer_description"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/record_button"
            android:layout_width="@dimen/small_pill_shape_width"
            android:layout_height="@dimen/small_pill_shape_height"
            android:layout_below="@id/remaining_timer"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
...
