package ch.epfl.sdp.blindly.audio

import android.content.Intent
import android.widget.ProgressBar
import android.widget.SeekBar
import androidx.recyclerview.widget.RecyclerView
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition
import androidx.test.espresso.intent.Intents
import androidx.test.espresso.intent.matcher.IntentMatchers
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.rule.GrantPermissionRule
import ch.epfl.sdp.blindly.R
import ch.epfl.sdp.blindly.actions.RecyclerViewChildActions.Companion.actionOnChild
import ch.epfl.sdp.blindly.actions.RecyclerViewChildActions.Companion.childOfViewAtPositionWithMatcher
import ch.epfl.sdp.blindly.audio.RecordingActivity.Companion.AUDIO_DURATION_KEY
import ch.epfl.sdp.blindly.matchers.EspressoTestMatchers.Companion.withDrawable
import ch.epfl.sdp.blindly.profile_setup.*
import ch.epfl.sdp.blindly.user.User
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import junit.framework.Assert.fail
import kotlinx.serialization.encodeToString
import kotlinx.serialization.json.Json
import org.hamcrest.Matchers.not
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import java.lang.reflect.Method

private const val AUDIO_FILE_ONE = "Recording 1"
private const val TEST_MAXIMUM_AUDIO_DURATION = 13000
private const val FIVE_SECONDS = 5000L
private const val TWO_SECONDS = 2000L
private const val TWO_HUNDRED = 200L
private const val FIVE_HUNDRED = 500L

@HiltAndroidTest
class RecordingActivityTest {
    private val TEST_USER = User.Builder()
        .setUsername(CORRECT_NAME)
        .setBirthday(TEST_BIRTHDAY)
        .setGender(TEST_GENDER_WOMEN)
        .setSexualOrientations(TEST_SEXUAL_ORIENTATIONS)
        .setPassions(TEST_PASSIONS)
    private val SERIALIZED = Json.encodeToString(TEST_USER)
    private val intent = Intent(
        ApplicationProvider.getApplicationContext(),
        RecordingActivity::class.java
    ).apply {
        putExtra(EXTRA_USER, SERIALIZED)
        putExtra(AUDIO_DURATION_KEY, TEST_MAXIMUM_AUDIO_DURATION)
    }

    @get:Rule
    var hiltRule = HiltAndroidRule(this)

    @get:Rule
    var permissionRule: GrantPermissionRule =
        GrantPermissionRule.grant(android.Manifest.permission.RECORD_AUDIO)

    @get:Rule
    val activityRule = ActivityScenarioRule<RecordingActivity>(intent)

    @Before
    fun setup() {
        hiltRule.inject()
        Intents.init()
    }

    @After
    fun afterEach() {
        Intents.release()
    }

    @Test
    fun recordNameIsCorrectlyDisplayed() {
        createRecord(TWO_HUNDRED)
        val recordName = onView(withId(R.id.recordName))
        recordName.check(matches(withText(AUDIO_FILE_ONE)))
    }

    @Test
    fun recordingActivityFiresProfileFinished() {
        createRecord(TWO_HUNDRED)
        onView(withId(R.id.nameDurationLayout))
            .perform(click())

        onView(withId(R.id.selectButton))
            .perform(click())
        Thread.sleep(1000)
        Intents.intended(IntentMatchers.hasComponent(ProfileFinished::class.java.name))
    }

    @Test
    fun playPauseButtonChangesBackgroundWhenClickedTwice() {
        createRecord(FIVE_HUNDRED)
        onView(withId(R.id.nameDurationLayout))
            .perform(click())
        onView(withId(R.id.playPauseButton))
            .perform(click())
        onView(withId(R.id.playPauseButton))
            .perform(click())
        onView(withId(R.id.playPauseButton))
            .check(
                matches(
                    withDrawable(R.drawable.play_button_fab)
                )
            )
    }

    @Test
    fun playPauseButtonChangesBackgroundWhenPlayIsFinished() {
        createRecord(FIVE_HUNDRED)
        onView(withId(R.id.nameDurationLayout))
            .perform(click())
        onView(withId(R.id.playPauseButton))
            .perform(click())
        Thread.sleep(2000L)
        onView(withId(R.id.playPauseButton))
            .check(
                matches(
                    withDrawable(R.drawable.play_button_fab)
                )
            )
    }

    @Test
    fun startRecordingCollapsesRecords() {
        createRecord(TWO_HUNDRED)
        onView(withId(R.id.nameDurationLayout))
            .perform(click())
        onView(withId(R.id.recordingButton))
            .perform(click())
        onView(withId(R.id.audioPlayLayout))
            .check(
                matches(
                    not(isDisplayed())
                )
            )
    }

    @Test
    fun maximumDurationStopsRecording() {
        val recordButton = onView(withId(R.id.recordingButton))
        recordButton.perform(click())
        Thread.sleep(TEST_MAXIMUM_AUDIO_DURATION + FIVE_HUNDRED)
        onView(withId(R.id.nameDurationLayout))
            .check(
                matches(
                    isDisplayed()
                )
            )
    }

    @Test
    fun remainingTimerIsRedWhen10SecondsRemain() {
        createRecord(TEST_MAXIMUM_AUDIO_DURATION - FIVE_SECONDS)
        onView(withId(R.id.remainingRecordTimer))
        onView(withId(R.id.remainingRecordTimer))
            .check(
                matches(
                    (hasTextColor(R.color.bright_red))
                )
            )
    }

    @Test
    fun startRecordingCollapsesAllRecordings() {
        createRecord(TWO_SECONDS)
        createRecord(TWO_SECONDS)
        //Click on the second recording to expand it
        onView(withId(R.id.recordingList)).perform(
            actionOnItemAtPosition<RecyclerView.ViewHolder>(
                1,
                actionOnChild(
                    click(),
                    R.id.nameDurationLayout
                )
            )
        )
        //Start recording
        onView(withId(R.id.recordingButton)).perform(click())
        //Check if both recordings are collapsed
        onView(withId(R.id.recordingList)).check(
            matches(
                childOfViewAtPositionWithMatcher(
                    R.id.audioPlayLayout, 0, not(isDisplayed())
                )
            )
        )
        onView(withId(R.id.recordingList)).check(
            matches(
                childOfViewAtPositionWithMatcher(
                    R.id.audioPlayLayout, 1, not(isDisplayed())
                )
            )
        )

    }

    @Test
    fun clickOnARecordingCollapsesAllOthers() {
        createRecord(TWO_SECONDS)
        createRecord(TWO_SECONDS)
        //Click on the first recording to expand it
        onView(withId(R.id.recordingList)).perform(
            actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                actionOnChild(
                    click(),
                    R.id.nameDurationLayout
                )
            )
        )
        //Click on the second recording to expand it
        onView(withId(R.id.recordingList)).perform(
            actionOnItemAtPosition<RecyclerView.ViewHolder>(
                1,
                actionOnChild(
                    click(),
                    R.id.nameDurationLayout
                )
            )
        )
        //Check if first recording is collapsed
        onView(withId(R.id.recordingList)).check(
            matches(
                childOfViewAtPositionWithMatcher(
                    R.id.audioPlayLayout, 0, not(isDisplayed())
                )
            )
        )
    }

    @Test
    fun timerChangesWhenUserClicksOnBar() {
        createRecord(TWO_SECONDS)
        //Click on the first recording to expand it
        onView(withId(R.id.recordingList)).perform(
            actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                actionOnChild(
                    click(),
                    R.id.nameDurationLayout
                )
            )
        )

        activityRule.scenario.onActivity { activity ->
            val playBar = activity.findViewById<SeekBar>(R.id.playBar)
            setSeekBarProgress(playBar, 50, true)
        }
    }

    private fun createRecord(duration: Long) {
        val recordButton = onView(withId(R.id.recordingButton))
        recordButton.perform(click())
        Thread.sleep(duration)
        recordButton.perform(click())
    }

    //Used to manually simulate a click from user and to set fromUser to 1
    private fun setSeekBarProgress(playBar: SeekBar, progress: Int, fromUser: Boolean) {
        var privateSetProgressMethod: Method? = null
        try {
            privateSetProgressMethod =
                ProgressBar::class.java.getDeclaredMethod(
                    "setProgressInternal",
                    Integer.TYPE,
                    java.lang.Boolean.TYPE,
                    java.lang.Boolean.TYPE
                )
            privateSetProgressMethod.isAccessible = true
            privateSetProgressMethod.invoke(playBar, progress, fromUser, false)
        } catch (e: ReflectiveOperationException) {
            e.printStackTrace()
            fail("Error while invoking private method.")
        }
    }
}
